rsass/tests/spec/non_conformant/errors/interpolation/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/interpolation"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("interpolation")
}

mod error_1;
